--- a/Webpage/movies.html
+++ b/Webpage/movies.html
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Movie Recommendations</title>
+        <title>Movie List</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
