--- a/Webpage/code.html
+++ b/Webpage/code.html
@@ -23,38 +23,8 @@
             </nav>
         </div>
         <br>
-        <div class="dropdown">
-            <label for="userInput">Enter movie title:</label>
-            <input type="text" id="userInput" list="optionsList">
-            <span class="error-message" id="errorMessage"></span>
-            <!-- Define the list of options -->
-            <datalist id="optionsList">
-                <option value="Option 1">
-                <option value="Option 2">
-                <option value="Option 3">
-                <!-- Add more options as needed -->
-            </datalist>
-        </div>
-        <br>
-        <div class="movie-recs">
-            <h3>Movie recommendations:</h3>
-            <table>
-                  <tr>
-                    <th>MOVIE</th>
-                    <th>GENRE</th>
-                    <th>AVERAGE RATING</th>
-                  </tr>
-                  <tr>
-                    <td>Movie1</td>
-                    <td>Genre1</td>
-                    <td>Avg rating1</td>
-                  </tr>
-                  <tr>
-                    <td>Movie2</td>
-                    <td>Genre2</td>
-                    <td>Avg rating2</td>
-                  </tr>
-            </table>
+        <div class="code">
+            <h2><u>Our process</u></h2>
         </div>
     </body>
     
