--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -6,7 +6,7 @@
         <title>Movie Recommendations</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="script.js"></script>
+        <script src="index.js"></script>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=KoHo">
     </head>
@@ -25,7 +25,7 @@
         <br>
         <div class="dropdown">
             <label for="userInput">Enter movie title:</label>
-            <input type="text" id="userInput" list="optionsList">
+            <input type="text" id="userInput" placeholder="Search for something..." list="optionsList">
             <span class="error-message" id="errorMessage"></span>
             <!-- Define the list of options -->
             <datalist id="optionsList">
@@ -58,5 +58,5 @@
         </div>
     </body>
     
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </html>
