--- a/Webpage/movies.html
+++ b/Webpage/movies.html
@@ -25,7 +25,7 @@
         <br>
         <div class="dropdown">
             <label for="userInput">Enter movie title:</label>
-            <input type="text" id="userInput" list="optionsList">
+            <input type="text" id="userInput" placeholder="Search for something..." list="optionsList">
             <span class="error-message" id="errorMessage"></span>
             <!-- Define the list of options -->
             <datalist id="optionsList">
