--- a/Webpage/code.html
+++ b/Webpage/code.html
@@ -25,6 +25,7 @@
         <br>
         <div class="code">
             <h2><u>Our process</u></h2>
+            <p>Text and images here about what we did.</p>
         </div>
     </body>
     
