additions to html

--- a/Webpage/code.html
+++ b/Webpage/code.html
@@ -25,7 +25,13 @@
         <br>
         <div class="code">
             <h2><u>Our process</u></h2>
-            <p>Text and images here about what we did.</p>
+            <p>Follow our process through some helpful slides.</p>
+            <img src="../Images/Project-4-1.png">
+            <img src="../Images/Project-4-2.png">
+            <img src="../Images/Project-4-3.png">
+            <img src="../Images/Project-4-4.png">
+            <img src="../Images/Project-4-5.png">
+            <img src="../Images/Project-4-6.png">
         </div>
     </body>
     
