--- a/Webpage/movies.html
+++ b/Webpage/movies.html
@@ -23,8 +23,10 @@
             </nav>
         </div>
         <br>
-        <div>
-            <center><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSp8feTJy0KxgYtwLGfYEwr3PmMkrEOio3m1RjfzKiucZLyCfJ3ujggExz7uPwzY5lG0pc6i1ddarjC/pubhtml?widget=true&amp;headers=false" width="50%" height="540"></iframe></center>
+        <div class="container">
+            <h2><u>List of films in dataset</u></h2>
+            <h3>Scroll to find your favorite, then plug it in to our model!</h3>
+            <center><iframe id="movies-list" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSp8feTJy0KxgYtwLGfYEwr3PmMkrEOio3m1RjfzKiucZLyCfJ3ujggExz7uPwzY5lG0pc6i1ddarjC/pubhtml?widget=true&amp;headers=false" width="50%" height="540"></iframe></center>
         </div>
     </body>
     
