prepare for node.js connection

--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -54,6 +54,46 @@
                     <td>Genre2</td>
                     <td>Avg rating2</td>
                   </tr>
+                  <tr>
+                    <td>Movie3</td>
+                    <td>Genre3</td>
+                    <td>Avg rating3</td>
+                  </tr>
+                  <tr>
+                    <td>Movie4</td>
+                    <td>Genre4</td>
+                    <td>Avg rating4</td>
+                  </tr>
+                  <tr>
+                    <td>Movie5</td>
+                    <td>Genre5</td>
+                    <td>Avg rating5</td>
+                  </tr>
+                  <tr>
+                    <td>Movie6</td>
+                    <td>Genre6</td>
+                    <td>Avg rating6</td>
+                  </tr>
+                  <tr>
+                    <td>Movie7</td>
+                    <td>Genre7</td>
+                    <td>Avg rating7</td>
+                  </tr>
+                  <tr>
+                    <td>Movie8</td>
+                    <td>Genre8</td>
+                    <td>Avg rating8</td>
+                  </tr>
+                  <tr>
+                    <td>Movie9</td>
+                    <td>Genre9</td>
+                    <td>Avg rating9</td>
+                  </tr>
+                  <tr>
+                    <td>Movie10</td>
+                    <td>Genre10</td>
+                    <td>Avg rating10</td>
+                  </tr>
             </table>
         </div>
     </body>
